# dalvikvm-multiplatform

./: .gitattributes  .gitignore  .gitmodules  README.md  bp2cmake_linux_scope.md  filesystem_win32.md  git_repo_migrate.md  project_scope.md  shared_bootjar_runtime_os_detection.md  win32_filesystem.md  win32_heap_memory.md  win32_jit_memory.md  win32_libcore_os_natives.md  win32_open_items.md  win32_port.md  win32_tls_jit_entrypoints.md  win64_art_port.md
archive-patches/: README.md  win64_phase2_interpreter_jni.md  win64_phase3_classpath_separator.md  win64_phase3_dns_localhost_hang.md  win64_phase3_java_version_version_class.md  win64_phase3_memmap_low4g_virtualquery.md  win64_phase3_mutex-inl.h  win64_phase3_poll_select_win10.md  win64_phase3_runtime_memory.md  win64_phase3_system_gc_hang_fix.md  win64_phase3_time_utils.cc
archived/: git_repo_migrate.md  shared_bootjar_runtime_os_detection.md
compat/include/: alloca.h  byteswap.h  com_android_libcore.h  cxxabi.h  dirent.h  dlfcn.h  elf.h  endian.h  fcntl.h  ftw.h  libgen.h  limits.h  link.h  math.h  mdvm_toolchain_prelude.h  mdvm_win64_prelude.h  netdb.h  poll.h  pthread.h  sched.h  signal.h  string.h  termios.h  time.h  ucontext.h  unistd.h
compat/include/android-base/: stringify.h
compat/include/arpa/: inet.h
compat/include/gtest/: gtest_prod.h
compat/include/linux/: fs.h  futex.h  userfaultfd.h
compat/include/net/: if.h  route.h
compat/include/netinet/: in.h  tcp.h
compat/include/sys/: cdefs.h  epoll.h  file.h  ioctl.h  mman.h  mount.h  param.h  ptrace.h  resource.h  sendfile.h  socket.h  stat.h  statvfs.h  syscall.h  time.h  ucontext.h  uio.h  un.h  utsname.h  wait.h
compat/java-stubs/: README.md
compat/java-stubs/android/annotation/: FlaggedApi.java
compat/src/: win64_posix_stubs.c  win64_socket_posix.c
native/: CMakeLists.txt  README.md  generate.sh
overlay/: port_policy.py  port_policy_windows.py
tools/: vendor-sync.sh
tools/bootimage/: build.sh  run.sh
tools/bootjar/: README.md  build.sh  build_conscrypt_win64.sh  build_okhttp_win64.sh  build_win64.sh  dex.sh
tools/bp2cmake/: CODEGEN.md  README.md
tools/bp2cmake/bp2cmake/: __init__.py  __main__.py  aconfig.py  ast.py  closure.py  codegen.py  codegen_main.py  config.py  emitter.py  evaluator.py  lexer.py  model.py  overlay.py  parser.py
tools/bp2cmake/tests/: test_aconfig.py  test_closure.py  test_codegen.py  test_evaluator.py  test_parser.py
tools/git/: README.md  push_all_to_github.sh  status_all.sh  unshallow_all.sh
tools/verify/artbase/: CMakeLists.txt  RESULT.md  artbase.cmake
tools/verify/artcore/: CMakeLists.txt  artcore.cmake
tools/verify/artdeps/: CMakeLists.txt  artdeps.cmake
tools/verify/artpalette/: CMakeLists.txt  RESULT.md  artpalette.cmake
tools/verify/dexfile/: CMakeLists.txt  RESULT.md  dexfile.cmake
tools/verify/e2e/: README.md  RESULT-bootimage.md  RESULT-bootjar.md  RESULT-bump-a16.md  RESULT-bump.md  RESULT.md
tools/verify/foundational/: CMakeLists.txt  RESULT.md  foundational.cmake
tools/verify/libbase/: CMakeLists.txt  RESULT.md  libbase.cmake  stub_log.c
tools/verify/linux_hello/: RESULT.md  run_imageless_hello.sh
tools/verify/llp64_ptr_cast_audit/: FULL_AST_RESULT.json  FULL_AST_RESULT.md  README.md  RESULT.md  scan_ast.sh  scan_ast_full.py  scan_compile_db_warnings.py  scan_text.py
tools/verify/runtime/: CMakeLists.txt  RESULT.md  runtime.cmake
tools/verify/win64_libcore_icu/: CMakeLists.txt  RESULT.md  crypto_sha_smoke.c  install_into_phase1.sh  openjdkjvm_memory_standalone.c  sources.cmake
tools/verify/win64_phase0/: CMakeLists.txt  RESULT.md  generate.sh  phase0.cmake
tools/verify/win64_phase0/gensrc/art/aconfig/include/: com_android_art_flags.h  com_android_art_rw_flags.h
tools/verify/win64_phase1/: CMakeLists.txt  RESULT.md  closure.txt  phase1.cmake
tools/verify/win64_phase2/: RESULT.md
tools/verify/win64_phase3/: L003_RESULT.md  RESULT.md  build_coreprobe.sh  build_gcprobe.sh  build_goldenapp.sh  build_interruptprobe.sh  build_ioprobe.sh  build_netprobe.sh  build_one.sh  build_probe.sh  run_abspathprobe.sh  run_all_wine_gates.sh  run_coreprobe.sh  run_dnsprobe.sh  run_gcforced.sh  run_gcprobe.sh  run_goldenapp.sh  run_interruptprobe.sh  run_ioprobe.sh  run_l003_wine.sh  run_netprobe.sh  run_one.sh  run_oserrnoprobe.sh  run_probe.sh  run_propsprobe.sh  run_rtmem.sh  run_threadstress.sh  run_throwprobe.sh
tools/verify/win64_phase3/evidence/: all_wine_gates.txt  host_package_wine_integrity.txt
tools/verify/win64_phase3/src/: AbsPathProbe.java  AsyncCloseProbe.java  BnProbe.java  CoreProbe.java  DnsProbe.java  ExecProbe.java  GcForced.java  GcProbe.java  GoldenApp.java  InterruptProbe.java  IoProbe.java  Ipv6Probe.java  NetProbe.java  (+13 more)
tools/verify/win64_phase4/: RESULT-critical-native.md  RESULT-interpreter-jni-fallback.md  RESULT-jit-matrix.md  RESULT-jit-smoke.md  RESULT-jvmti-force.md  RESULT-math-critical.md  RESULT-native-abi.md  RESULT-pthread-once.md  RESULT.md  W024_HOST_CHECKLIST.md  build_one.sh  pthread_once_probe.c  run_all_wine_gates.sh  run_crashabort.sh  run_crashnative.sh  run_critical_native_probe.sh  run_gcstress.sh  run_handleleak.sh  run_jit_matrix.sh  run_jit_section_probe.sh  run_jit_smoke.sh  run_jvmti_force_probe.sh  run_math_critical_probe.sh  run_native_abi_probe.sh  run_one.sh  run_perfsmoke.sh  run_pthread_once_probe.sh  run_threadheavy.sh  run_w024_cleanup_check.sh
tools/verify/win64_phase4/critical_native/: CMakeLists.txt  critical_native_probe.c
tools/verify/win64_phase4/jvmti_force/: CMakeLists.txt  jvmti_force_probe.c
tools/verify/win64_phase4/native_abi/: CMakeLists.txt  native_abi_probe.c
tools/win64/: generate_cacerts.sh  stage_native_modules.sh  stage_run_assets.sh
tools/win64/host_package/: G12_HOST_CHECKLIST.md  package_win64_phase3.sh  package_win64_w024_tripwire.sh  smoke_package_wine64.sh
tools/win64/jni_stubs/: README.md  build_combined.sh  libcore_hello3.c  native_converter.c  win_fs_natives.c  win_net_natives.c  win_path.c  win_path.h  win_process_natives.c  win_runtime_natives.c
vendor-patches/: README.md
(+29 files in other folders)
